--- a/infra/k8s/depl.yaml
+++ b/infra/k8s/depl.yaml
@@ -32,3 +32,19 @@ spec:
     - name: http
       port: 80
       targetPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/instance: test-argocd
+  name: express-server-cip
+  namespace: default
+spec:
+  ports:
+    - name: http
+      port: 80
+      targetPort: 5000
+  selector:
+    app.kubernetes.io/name: express-server
+  type: ClusterIP
