Add NodePort SVC in depl.yaml

--- a/infra/k8s/depl.yaml
+++ b/infra/k8s/depl.yaml
@@ -48,3 +48,20 @@ spec:
   selector:
     app.kubernetes.io/name: express-server
   type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/instance: test-argocd
+  name: express-server-np
+  namespace: default
+spec:
+  type: NodePort
+  selector:
+    app.kubernetes.io/name: express-server
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+      nodePort: 30080
